# tsa-passenger-forecasting-dashboard

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml  refresh-tsa-data.yml
data/raw/: tsa_passenger_data.csv
docs/: architecture.md  data_dictionary.md  data_readiness_report.md  feature_importance_report.md  kalshi_trade_strategy_report.md  live_weekly_model_report.md  live_weekly_predictor_analysis.md  model_audit_summary.md  transport_enrichment_report.md
scripts/: README.md  _dispatch.py  analyze_data.py  analyze_feature_importance.py  analyze_live_predictor_features.py  audit_kalshi_history_coverage.py  backtest_kalshi_contract_trade_strategy.py  backtest_kalshi_dashboard_ensemble.py  backtest_kalshi_trade_strategy.py  backtest_live_weekly_model.py  backtest_weekly_ensemble_model.py  build_calendar_features.py  build_kalshi_preweek_contract_signals.py  build_model_audit_report.py  build_transport_features.py  fetch_bts_transport_data.py  fetch_kalshi_contract_history.py  fetch_tsa_data.py  inspect_data.py  predict_live_week.py  train_live_week_model.py  validate_project.py
scripts/analysis/: analyze_data.py  analyze_feature_importance.py  analyze_live_predictor_features.py  build_model_audit_report.py  validate_project.py
scripts/data/: build_calendar_features.py  build_transport_features.py  fetch_bts_transport_data.py  fetch_tsa_data.py  inspect_data.py
src/tsa_project/: __init__.py  (+17 more)
tests/: test_ingest_tsa.py  test_live_weekly_model.py  test_streamlit_refresh.py
(+10 files in other folders)
